; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_sys_domain.c_systemdomain_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_sys_domain.c_systemdomain_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.domain = type { i32 }

@DOM_INITIALIZED = common dso_local global i32 0, align 4
@systemdomain = common dso_local global %struct.domain* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.domain*)* @systemdomain_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @systemdomain_init(%struct.domain* %0) #0 {
  %2 = alloca %struct.domain*, align 8
  store %struct.domain* %0, %struct.domain** %2, align 8
  %3 = load %struct.domain*, %struct.domain** %2, align 8
  %4 = getelementptr inbounds %struct.domain, %struct.domain* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @DOM_INITIALIZED, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  %9 = xor i1 %8, true
  %10 = zext i1 %9 to i32
  %11 = call i32 @VERIFY(i32 %10)
  %12 = load %struct.domain*, %struct.domain** @systemdomain, align 8
  %13 = icmp eq %struct.domain* %12, null
  %14 = zext i1 %13 to i32
  %15 = call i32 @VERIFY(i32 %14)
  %16 = load %struct.domain*, %struct.domain** %2, align 8
  store %struct.domain* %16, %struct.domain** @systemdomain, align 8
  %17 = load %struct.domain*, %struct.domain** %2, align 8
  %18 = call i32 @kern_event_init(%struct.domain* %17)
  %19 = load %struct.domain*, %struct.domain** %2, align 8
  %20 = call i32 @kern_control_init(%struct.domain* %19)
  ret void
}

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i32 @kern_event_init(%struct.domain*) #1

declare dso_local i32 @kern_control_init(%struct.domain*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
